Changelog is sorted by date. Most recent changes are up top.

[5/5/2020]
* Added patch to lower the amount of required tags in the uploader.
* Initial publication of dockerfile.